work section spacing fixes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,6 +26,7 @@ header h1 {
     background-color: var(--primary-color);
     margin: 0;
     color: var(--secondary-color);
+    padding: 0 4rem;
 }
 
 header nav {
@@ -104,7 +105,7 @@ header nav ul li a {
 .photo-boxes {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-auto-flow: column;
+    gap: 1rem;
 }
 
 .main-container {
@@ -112,7 +113,7 @@ header nav ul li a {
 }
 
 .small-container {
-   background-color: var(--primary-color);
+    background-color: var(--primary-color);
 }
 
 /* Contact Me Section */
